--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ body, html {
     flex-wrap: column;
     flex-direction: column;
     align-items: center;
-    height: auto;
     width: 100vw;
     background-color: #505050;
     border-radius: 15px;
@@ -53,8 +52,7 @@ body, html {
 }
 
 .card-body canvas {
-    display: flex;
-    flex-direction: column;
+    position: relative;
     width: 80vw;
     height: auto;
 }
@@ -64,22 +62,6 @@ body, html {
     padding: 10px;
 }
 
-
-/* .weather-info h3 a {
-    color: rgba(0, 144, 255, 1);
-    text-decoration: none;
-    transition: 0.3s;
-}
-
-.weather-info h3 a:hover {
-    color: #ffd700;
-    transition: 0.3s;
-}
-
-.weather-info p {
-    margin: 0px;
-    text-align: center;
-} */
 
 
 
@@ -112,3 +94,4 @@ address {
 .faqs p {
     text-indent: 20px;
 }
+
